--- a/firmaImproving/firmaImprovingBoostrap.html
+++ b/firmaImproving/firmaImprovingBoostrap.html
@@ -1,67 +1,75 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fuente Improving</title>
-    
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <style>
+    @font-face {
+        font-family: 'Aptos';
+        src: url('https://https://github.com/ImprologFirma/firma/blob/main/firmaImproving/font/aptos.woff') format('woff2');
+        font-weight: normal;
+        font-style: normal;
+    }
+
     body {
-    font-family: 'Aptos', sans-serif;
-    width: fit-content;
-    color: #00263A;
+        font-family: 'Aptos', sans-serif;
+        width: fit-content;
+        color: #00263A;
 
-}
+    }
 
-p{
-    font-size: 10.5px;
-}
+    p {
+        font-size: 10.5px;
+    }
 
-.remitente{
-    font-weight: bold;
-    font-size: 11px;
-    padding: 0;
-    margin-top: 5px;
-}
+    .remitente {
+        font-weight: bold;
+        font-size: 11px;
+        padding: 0;
+        margin-top: 5px;
+    }
 
-.content{
-    margin: 0;
-    margin-right: 20px;
-    line-height: 1;
-    padding: 0;
-}
+    .content {
+        margin: 0;
+        margin-right: 20px;
+        line-height: 1;
+        padding: 0;
+    }
 
-hr{
-    border: 0.1px solid #bd955a;
-}
+    hr {
+        border: 0.1px solid #bd955a;
+    }
 
-.icono{
-    margin: 5px;
-    height: 20px;
-}
+    .icono {
+        margin: 5px;
+        height: 20px;
+    }
 
-.iconosInfo{
-    margin: 5px;
-    height: 8px;
-}
+    .iconosInfo {
+        margin: 5px;
+        height: 8px;
+    }
 
-.info{
-    display: flex;
-    height: fit-content;
-    margin: 0;
-    padding: 0;
-    line-height: 0;
-}
+    .info {
+        display: flex;
+        height: fit-content;
+        margin: 0;
+        padding: 0;
+        line-height: 0;
+    }
 
-.footer{
-    display: flex;
-    flex-direction: column;
-    border-top: 1px solid #bd955a;
-    margin-top: 10px;
-}
+    .footer {
+        display: flex;
+        flex-direction: column;
+        border-top: 1px solid #bd955a;
+        margin-top: 10px;
+    }
 </style>
+
 <body>
     <div class="container mt-4">
         <div class="row border p-3">
@@ -73,40 +81,41 @@ hr{
             </div>
             <div class="col-md-6 border-start d-flex flex-column align-items-center align-items-md-start">
                 <div class="d-flex align-items-center mb-2">
-                    <img src="imgs/tlf.png" class="me-2" alt="Teléfono" width="20">
+                    <img src="https://github.com/ImprologFirma/firma/blob/main/firmaImproving/imgs/tlf.png" class="me-2" alt="Teléfono" width="20">
                     <p class="mb-0">M: (+34) 618 312 817</p>
                 </div>
                 <div class="d-flex align-items-center mb-2">
-                    <img src="imgs/mail.png" class="me-2" alt="Email" width="20">
+                    <img src="https://github.com/ImprologFirma/firma/blob/main/firmaImproving/imgs/mail.png" class="me-2" alt="Email" width="20">
                     <p class="mb-0"><a href="mailto:dgarcia@improlog.com">dgarcia@improlog.com</a></p>
                 </div>
                 <div class="d-flex align-items-center mb-2">
-                    <img src="imgs/cadena.png" class="me-2" alt="Web" width="20">
+                    <img src="https://github.com/ImprologFirma/firma/blob/main/firmaImproving/imgs/cadena.png" class="me-2" alt="Web" width="20">
                     <p class="mb-0"><a href="https://improlog.com/">www.improlog.com</a></p>
                 </div>
                 <div class="d-flex align-items-center">
-                    <img src="imgs/ubi.png" class="me-2" alt="Ubicación" width="20">
+                    <img src="https://github.com/ImprologFirma/firma/blob/main/firmaImproving/imgs/ubi.png" class="me-2" alt="Ubicación" width="20">
                     <p class="mb-0">Sede Central: Pq. Tecn. C/ Charles Robert Darwin 28, 46980 Paterna (Valencia)</p>
                 </div>
             </div>
         </div>
     </div>
-    
+
     <div class="container mt-4">
         <div class="d-flex flex-column flex-md-row justify-content-between align-items-center border-top pt-3">
-            <img src="imgs/improving_img.jpg" style="height: 34px; width: 168px;" alt="Improving">
+            <img src="https://github.com/ImprologFirma/firma/blob/main/firmaImproving/imgs/improving_img.jpg" style="height: 34px; width: 168px;" alt="Improving">
             <div class="d-flex align-items-center mt-2 mt-md-0">
-                <p class="mb-0 me-3"><a href="https://improlog.com/aviso-legal-y-politica-de-privacidad/">Política de privacidad</a></p>
+                <p class="mb-0 me-3"><a href="https://improlog.com/aviso-legal-y-politica-de-privacidad/">Política de
+                        privacidad</a></p>
                 <a href="https://www.linkedin.com/company/improving-logistics-&-consulting-sl" class="me-2">
-                    <img src="imgs/linkedin.png" width="24" alt="LinkedIn">
+                    <img src="https://github.com/ImprologFirma/firma/blob/main/firmaImproving/imgs/linkedin.png" width="24" alt="LinkedIn">
                 </a>
                 <a href="https://www.youtube.com/@ImprovingLogistics">
-                    <img src="imgs/youtube.png" width="24" alt="YouTube">
+                    <img src="https://github.com/ImprologFirma/firma/blob/main/firmaImproving/imgs/youtube.png" width="24" alt="YouTube">
                 </a>
             </div>
         </div>
     </div>
-
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
+
 </html>
