--- a/firmaImproving/firmaImprovingBoostrap.html
+++ b/firmaImproving/firmaImprovingBoostrap.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fuente Improving</title>
+
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <style>
@@ -81,19 +82,19 @@
             </div>
             <div class="col-md-6 border-start d-flex flex-column align-items-center align-items-md-start">
                 <div class="d-flex align-items-center mb-2">
-                    <img src="https://github.com/ImprologFirma/firma/blob/main/firmaImproving/imgs/tlf.png" class="me-2" alt="Teléfono" width="20">
+                    <img src="https://raw.githubusercontent.com/ImprologFirma/firma/main/firmaImproving/imgs/tlf.png" class="me-2" alt="Teléfono" width="20">
                     <p class="mb-0">M: (+34) 618 312 817</p>
                 </div>
                 <div class="d-flex align-items-center mb-2">
-                    <img src="https://github.com/ImprologFirma/firma/blob/main/firmaImproving/imgs/mail.png" class="me-2" alt="Email" width="20">
+                    <img src="https://raw.githubusercontent.com/ImprologFirma/firma/main/firmaImproving/imgs/mail.png" class="me-2" alt="Email" width="20">
                     <p class="mb-0"><a href="mailto:dgarcia@improlog.com">dgarcia@improlog.com</a></p>
                 </div>
                 <div class="d-flex align-items-center mb-2">
-                    <img src="https://github.com/ImprologFirma/firma/blob/main/firmaImproving/imgs/cadena.png" class="me-2" alt="Web" width="20">
+                    <img src="https://raw.githubusercontent.com/ImprologFirma/firma/main/firmaImproving/imgs/cadena.png" class="me-2" alt="Web" width="20">
                     <p class="mb-0"><a href="https://improlog.com/">www.improlog.com</a></p>
                 </div>
                 <div class="d-flex align-items-center">
-                    <img src="https://github.com/ImprologFirma/firma/blob/main/firmaImproving/imgs/ubi.png" class="me-2" alt="Ubicación" width="20">
+                    <img src="https://raw.githubusercontent.com/ImprologFirma/firma/main/firmaImproving/imgs/ubi.png" class="me-2" alt="Ubicación" width="20">
                     <p class="mb-0">Sede Central: Pq. Tecn. C/ Charles Robert Darwin 28, 46980 Paterna (Valencia)</p>
                 </div>
             </div>
@@ -102,19 +103,20 @@
 
     <div class="container mt-4">
         <div class="d-flex flex-column flex-md-row justify-content-between align-items-center border-top pt-3">
-            <img src="https://github.com/ImprologFirma/firma/blob/main/firmaImproving/imgs/improving_img.jpg" style="height: 34px; width: 168px;" alt="Improving">
+            <img src="https://raw.githubusercontent.com/ImprologFirma/firma/main/firmaImproving/imgs/improving_img.jpg" style="height: 34px; width: 168px;" alt="Improving">
             <div class="d-flex align-items-center mt-2 mt-md-0">
                 <p class="mb-0 me-3"><a href="https://improlog.com/aviso-legal-y-politica-de-privacidad/">Política de
                         privacidad</a></p>
                 <a href="https://www.linkedin.com/company/improving-logistics-&-consulting-sl" class="me-2">
-                    <img src="https://github.com/ImprologFirma/firma/blob/main/firmaImproving/imgs/linkedin.png" width="24" alt="LinkedIn">
+                    <img src="https://raw.githubusercontent.com/ImprologFirma/firma/main/firmaImproving/imgs/linkedin.png" width="24" alt="LinkedIn">
                 </a>
                 <a href="https://www.youtube.com/@ImprovingLogistics">
-                    <img src="https://github.com/ImprologFirma/firma/blob/main/firmaImproving/imgs/youtube.png" width="24" alt="YouTube">
+                    <img src="https://raw.githubusercontent.com/ImprologFirma/firma/main/firmaImproving/imgs/youtube.png" width="24" alt="YouTube">
                 </a>
             </div>
         </div>
     </div>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 
